[gd_scene load_steps=35 format=2]

[ext_resource path="res://scripts/GUI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://scripts/Behaviors/AmbienceBehavior.gd" type="Script" id=2]
[ext_resource path="res://data/private/sounds/music/scott-buckley-neon.ogg" type="AudioStream" id=3]
[ext_resource path="res://scripts/Behaviors/UIManager.gd" type="Script" id=4]
[ext_resource path="res://scripts/GUI/TransitionContainer.gd" type="Script" id=5]
[ext_resource path="res://data/private/textures/space/space-bg_mine.png" type="Texture" id=6]
[ext_resource path="res://scripts/GUI/MainMenuHUD.gd" type="Script" id=7]
[ext_resource path="res://data/private/textures/title.png" type="Texture" id=8]
[ext_resource path="res://scenes/GUI/ButtonBase.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/GUI/DialogWindowBaseASCII.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/GUI/MainMenu/Leaderboard.gd" type="Script" id=11]
[ext_resource path="res://scenes/GUI/ItemList/MyItemList.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/GUI/ItemList/LeaderboardRow.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/GUI/Dialogs/PlayerName.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/GUI/Dialogs/Credits.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/GUI/Dialogs/Settings.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/GUI/Debug/FPSCounter.tscn" type="PackedScene" id=17]
[ext_resource path="res://scripts/GUI/SafeArea.gd" type="Script" id=18]
[ext_resource path="res://scripts/Behaviors/LocalSaveBehavior.gd" type="Script" id=19]
[ext_resource path="res://data/shaders/ui_vfx.shader" type="Shader" id=20]
[ext_resource path="res://data/animations/popin_shader.tres" type="Animation" id=21]
[ext_resource path="res://scenes/GUI/Dialogs/ValidateDiag.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/tileset_source/human_scout.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/tileset_source/vorg_battleship.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/tileset_source/jerg_frigate.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/tileset_source/minigun_fx.tscn" type="PackedScene" id=26]
[ext_resource path="res://scenes/tileset_source/missile_fx.tscn" type="PackedScene" id=27]
[ext_resource path="res://scenes/tileset_source/probe.tscn" type="PackedScene" id=28]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

void fragment()
{
	vec2 uv = UV;
	uv.x += TIME / 100.0;
	uv.y += TIME / 75.0f;
	vec4 col = texture(TEXTURE, uv);
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )

[sub_resource type="Animation" id=3]
resource_name = "frigate_vs"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("frigate_vs/frigate_root:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 5.4, 5.7, 7.8, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 1152 ), Vector2( 640, 512 ), Vector2( 640, 512 ), Vector2( 640, 512 ), Vector2( -160, -288 ), Vector2( -160, -288 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("frigate_vs/frigate_root:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 5.4, 5.7, 7.8, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, -45.0, -45.0, -45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("frigate_vs/battleship_root:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3, 5.4, 6, 9.5, 9.501, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2048, 384 ), Vector2( 768, 384 ), Vector2( 768, 384 ), Vector2( 768, 384 ), Vector2( 2000, 384 ), Vector2( 2000, 384 ), Vector2( 2000, 384 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("frigate_vs/battleship_root:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3, 5.4, 6, 9.5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -90.0, -90.0, -90.0, 90.0, 90.0, 90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("frigate_vs/battleship_root/minigun_fx:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3.2, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("frigate_vs/frigate_root/hit_fx")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 3.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_hull_hit"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("frigate_vs/missile_fx:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 3.7, 4.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("frigate_vs/missile_fx")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 3.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ Vector2( 768, 384 ), false ],
"method": "Start"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("frigate_vs/missile_fx/AudioStreamPlayer2D:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 3.7, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("frigate_vs/battleship_root/minigun_fx/AudioStreamPlayer2D:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 3.2, 3.8, 5.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, false ]
}
tracks/10/type = "method"
tracks/10/path = NodePath("frigate_vs/battleship_root/hit_fx")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 4.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_shield_hit"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "passing_scout"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("scout_root:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 2.3, 5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -90, 580 ), Vector2( 600, 580 ), Vector2( 600, 580 ), Vector2( 1300, -120 ), Vector2( 1300, -120 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("scout_root:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 2.3, 5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 90.0, 90.0, 45.0, 45.0, 45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("scout_root2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -120 ), Vector2( 0, -120 ), Vector2( 1500, 1380 ), Vector2( 1500, 1380 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("scout_root2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 135.0, 135.0, 135.0, 135.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "poor_probe"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("poor_probe/probe_root:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.8, 3.5, 4.2, 5.7, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2304, 640 ), Vector2( 1024, 640 ), Vector2( 1024, 640 ), Vector2( 1024, 640 ), Vector2( -384, 640 ), Vector2( -384, 640 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("poor_probe/probe_root:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.8, 3.5, 3.7, 4.2, 5.7, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -90.0, -90.0, 90.0, 90.0, -90.0, -90.0, -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("scout_root:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4.3, 9.2, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2304, 640 ), Vector2( 2304, 640 ), Vector2( -384, 640 ), Vector2( -384, 640 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("scout_root:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5, 9.2, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -90.0, -90.0, -90.0, -90.0 ]
}

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 20 )
shader_param/pixel = 1.0
shader_param/red_offset = Vector2( 0, 0 )
shader_param/green_offset = Vector2( 0, 0 )
shader_param/blue_offset = Vector2( 0, 0 )
shader_param/alpha = 1.0
shader_param/rand_strength = 1.0
shader_param/affected = Plane( 0, 0, 1, 1 )

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="Ambience" type="Node" parent="."]
script = ExtResource( 2 )

[node name="OnLoad" type="AudioStreamPlayer" parent="Ambience"]
stream = ExtResource( 3 )
bus = "Music"

[node name="UIManager" type="Node" parent="."]
script = ExtResource( 4 )
animator = NodePath("PopinAnimShader")
fx_viewport = NodePath("../CanvasLayer/ViewportContainer/Viewport")
fx_viewport_container = NodePath("../CanvasLayer/ViewportContainer")

[node name="PopinAnimShader" type="AnimationPlayer" parent="UIManager"]
root_node = NodePath("../../CanvasLayer/ViewportContainer")
anims/popin = ExtResource( 21 )

[node name="LocalSave" type="Node" parent="."]
script = ExtResource( 19 )

[node name="BG" type="TextureRect" parent="."]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animated" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animated"]
anims/frigate_vs = SubResource( 3 )
anims/passing_scout = SubResource( 2 )
anims/poor_probe = SubResource( 4 )

[node name="scout_root" parent="Animated" instance=ExtResource( 23 )]
position = Vector2( 2304, 640 )
rotation = -1.5708

[node name="scout_root2" parent="Animated" instance=ExtResource( 23 )]
position = Vector2( 0, -120 )
rotation = 2.35619

[node name="frigate_vs" type="Node2D" parent="Animated"]

[node name="frigate_root" parent="Animated/frigate_vs" instance=ExtResource( 25 )]
position = Vector2( 640, 1152 )
rotation = 0.0

[node name="missile_fx" parent="Animated/frigate_vs" instance=ExtResource( 27 )]
visible = false
position = Vector2( 640, 512 )

[node name="AudioStreamPlayer2D" parent="Animated/frigate_vs/missile_fx" index="2"]
autoplay = false

[node name="battleship_root" parent="Animated/frigate_vs" instance=ExtResource( 24 )]
position = Vector2( 2048, 384 )
rotation = -1.5708

[node name="minigun_fx" parent="Animated/frigate_vs/battleship_root" instance=ExtResource( 26 )]
visible = false
rotation = 0.785398

[node name="muzzle" parent="Animated/frigate_vs/battleship_root/minigun_fx" index="1"]
frame = 5

[node name="AudioStreamPlayer2D" parent="Animated/frigate_vs/battleship_root/minigun_fx" index="2"]
visible = false
autoplay = false

[node name="poor_probe" type="Node2D" parent="Animated"]

[node name="probe_root" parent="Animated/poor_probe" instance=ExtResource( 28 )]
position = Vector2( 2304, 640 )
rotation = -1.5708

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SafeArea" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuRootRoot" type="Control" parent="CanvasLayer/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuRoot" type="Control" parent="CanvasLayer/SafeArea/MenuRootRoot"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
Transition = false

[node name="Label" type="Label" parent="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 36.3677
margin_top = -39.5347
margin_right = 76.3677
margin_bottom = -25.5347
text = "Version 1.0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 28.0
margin_top = 40.0
margin_right = -42.0
margin_bottom = -31.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBtn" type="Control" parent="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer"]
margin_right = 500.0
margin_bottom = 649.0
rect_min_size = Vector2( 500, 0 )

[node name="GameTitle" type="TextureRect" parent="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer/MenuBtn"]
anchor_right = 1.0
margin_right = -3.05176e-05
margin_bottom = 92.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" parent="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer/MenuBtn" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -238.0
margin_right = 70.0
margin_bottom = -148.0
rect_min_size = Vector2( 140, 90 )
Text = "[c]ontinue"
ShortcutKey = "c"
AlwaysOnShortcut = false
Disabled = true

[node name="NewGameBTN" parent="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer/MenuBtn" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -128.0
margin_right = 70.0
margin_bottom = -38.0
rect_min_size = Vector2( 140, 90 )
Text = "[n]ew game"
ShortcutKey = "n"
AlwaysOnShortcut = false

[node name="Setting" parent="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer/MenuBtn" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -18.0
margin_right = 70.0
margin_bottom = 72.0
rect_min_size = Vector2( 140, 90 )
Text = "[s]ettings"
ShortcutKey = "s"
AlwaysOnShortcut = false

[node name="Credits" parent="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer/MenuBtn" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = 92.0
margin_right = 70.0
margin_bottom = 182.0
rect_min_size = Vector2( 140, 90 )
Text = "[?]credits"
ShortcutKey = "?"
AlwaysOnShortcut = false

[node name="Quit" parent="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer/MenuBtn" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = 202.0
margin_right = 70.0
margin_bottom = 292.0
rect_min_size = Vector2( 140, 90 )
Text = "[q]uit"
ShortcutKey = "q"
AlwaysOnShortcut = false

[node name="Control" type="Control" parent="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer"]
margin_left = 500.0
margin_right = 500.0
margin_bottom = 649.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer"]
margin_left = 500.0
margin_right = 1210.0
margin_bottom = 649.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="base" parent="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer/VBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 710.0
margin_bottom = 445.0
rect_min_size = Vector2( 710, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Leaderboard" type="Control" parent="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer/VBoxContainer/base"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leaderlist" parent="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer/VBoxContainer/base/Leaderboard" instance=ExtResource( 12 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
mouse_filter = 1
Row = ExtResource( 13 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer/VBoxContainer"]
margin_top = 449.0
margin_right = 710.0
margin_bottom = 649.0
rect_min_size = Vector2( 0, 200 )

[node name="PlayerNameRoot" type="Control" parent="CanvasLayer/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" parent="CanvasLayer/SafeArea/PlayerNameRoot" instance=ExtResource( 14 )]
visible = false
margin_top = -2.0
margin_bottom = -2.0

[node name="CreditsRoot" type="Control" parent="CanvasLayer/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" parent="CanvasLayer/SafeArea/CreditsRoot" instance=ExtResource( 15 )]
visible = false

[node name="SettingsRoot" type="Control" parent="CanvasLayer/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" parent="CanvasLayer/SafeArea/SettingsRoot" instance=ExtResource( 16 )]
visible = false

[node name="ValidateRoot" type="Control" parent="CanvasLayer/SafeArea"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValidateDiag" parent="CanvasLayer/SafeArea/ValidateRoot" instance=ExtResource( 22 )]
visible = false

[node name="FPSCounter" parent="CanvasLayer/SafeArea" instance=ExtResource( 17 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.8552
margin_top = 15.8228
margin_right = 178.855
margin_bottom = 73.8228
Transition = false

[node name="ViewportContainer" type="ViewportContainer" parent="CanvasLayer"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="CanvasLayer/ViewportContainer"]
size = Vector2( 1280, 720 )
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[connection signal="pressed" from="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer/MenuBtn/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer/MenuBtn/NewGameBTN" to="." method="_on_newgame_pressed"]
[connection signal="pressed" from="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer/MenuBtn/Setting" to="." method="_on_Setting_pressed"]
[connection signal="pressed" from="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer/MenuBtn/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CanvasLayer/SafeArea/MenuRootRoot/MenuRoot/HBoxContainer/MenuBtn/Quit" to="." method="_on_Quit_pressed"]

[editable path="Animated/frigate_vs/frigate_root"]
[editable path="Animated/frigate_vs/missile_fx"]
[editable path="Animated/frigate_vs/battleship_root"]
[editable path="Animated/frigate_vs/battleship_root/minigun_fx"]
